# yeet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  webgpu-utils.cpp  webgpu-utils.h
lib/core/include/core/: core.hpp  defer.hpp  defines.hpp  fmt.hpp  ints.hpp  types.hpp  yeetgpu.hpp
lib/setup/: setup.cpp
lib/setup/include/setup/: setup.hpp
lib/window/include/window/: window.hpp
src/: entry.cpp
